# lab-flask

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
lab_flask/: app.py
lab_flask/models/: device.py  user.py
lab_flask/resources/: device.py  user.py
